refactor: create IPC_MESSAGES enum for IPC message channels

--- a/filenames.auto.gni
+++ b/filenames.auto.gni
@@ -139,6 +139,8 @@ auto_filenames = {
     "lib/common/api/module-list.ts",
     "lib/common/api/shell.ts",
     "lib/common/define-properties.ts",
+    "lib/common/ipc-messages.ts",
+    "lib/common/remote/ipc-messages.ts",
     "lib/common/type-utils.ts",
     "lib/common/web-view-methods.ts",
     "lib/common/webpack-globals-provider.ts",
@@ -244,7 +246,9 @@ auto_filenames = {
     "lib/common/api/shell.ts",
     "lib/common/define-properties.ts",
     "lib/common/init.ts",
+    "lib/common/ipc-messages.ts",
     "lib/common/parse-features-string.ts",
+    "lib/common/remote/ipc-messages.ts",
     "lib/common/reset-search-paths.ts",
     "lib/common/type-utils.ts",
     "lib/common/web-view-methods.ts",
@@ -266,6 +270,8 @@ auto_filenames = {
     "lib/common/api/shell.ts",
     "lib/common/define-properties.ts",
     "lib/common/init.ts",
+    "lib/common/ipc-messages.ts",
+    "lib/common/remote/ipc-messages.ts",
     "lib/common/reset-search-paths.ts",
     "lib/common/type-utils.ts",
     "lib/common/web-view-methods.ts",
@@ -309,6 +315,8 @@ auto_filenames = {
     "lib/common/api/shell.ts",
     "lib/common/define-properties.ts",
     "lib/common/init.ts",
+    "lib/common/ipc-messages.ts",
+    "lib/common/remote/ipc-messages.ts",
     "lib/common/reset-search-paths.ts",
     "lib/common/type-utils.ts",
     "lib/common/webpack-globals-provider.ts",
