refactor: remove duplicate <webview> event list

--- a/filenames.auto.gni
+++ b/filenames.auto.gni
@@ -140,6 +140,7 @@ auto_filenames = {
     "lib/common/api/shell.ts",
     "lib/common/define-properties.ts",
     "lib/common/type-utils.ts",
+    "lib/common/web-view-events.ts",
     "lib/common/web-view-methods.ts",
     "lib/common/webpack-globals-provider.ts",
     "lib/renderer/api/context-bridge.ts",
@@ -247,6 +248,7 @@ auto_filenames = {
     "lib/common/parse-features-string.ts",
     "lib/common/reset-search-paths.ts",
     "lib/common/type-utils.ts",
+    "lib/common/web-view-events.ts",
     "lib/common/web-view-methods.ts",
     "lib/common/webpack-globals-provider.ts",
     "lib/renderer/ipc-renderer-internal-utils.ts",
@@ -268,6 +270,7 @@ auto_filenames = {
     "lib/common/init.ts",
     "lib/common/reset-search-paths.ts",
     "lib/common/type-utils.ts",
+    "lib/common/web-view-events.ts",
     "lib/common/web-view-methods.ts",
     "lib/common/webpack-globals-provider.ts",
     "lib/common/webpack-provider.ts",
