--- a/filenames.auto.gni
+++ b/filenames.auto.gni
@@ -228,7 +228,7 @@ auto_filenames = {
     "lib/browser/desktop-capturer.ts",
     "lib/browser/devtools.ts",
     "lib/browser/guest-view-manager.js",
-    "lib/browser/guest-window-manager.js",
+    "lib/browser/guest-window-manager.ts",
     "lib/browser/init.ts",
     "lib/browser/ipc-main-impl.ts",
     "lib/browser/ipc-main-internal-utils.ts",
